# qr-wasm

./: .gitignore  Cargo.toml  README.md  SECURITY.md  TESTING.md  build.sh  package-lock.json  package.json  wrangler.toml
public/: app.js  index.html  styles.css
src/: lib.rs
tests/: README.md  api_tests.sh  generate_junit.sh  integration.rs
